--- a/index.html
+++ b/index.html
@@ -54,23 +54,18 @@
 				</ul>
 
 			</div>
-			<a href="#one" class="more scrolly">Welcom Note</a>
+			<a href="#welcome" class="more scrolly">Welcom Note</a>
 		</section>
-		<section id="one" class="wrapper style1 special">
-			<section id="one" class="wrapper style1 special">
+		<section id="welcome" class="wrapper style1 special">
+			<section id="welocme" class="wrapper style1 special">
 				<div class="inner">
 					<br class="major">
 					<h2>We cordialy welcome you<br />
 						to celebrate their WEDDING</h2>
-					<div class="image"><img src="images/invitation.jpeg" alt=""  style="width: 100%; height: auto"/></div>
+					<div class="image"><img src="images/invitation.jpeg" alt="" style="width: 100%; height: auto" />
+					</div>
 					<hr>
 					</header>
-					<!-- <ul class="icons major">
-							<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-							<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-							<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-						</ul> -->
-
 				</div>
 			</section>
 			<!-- One -->
@@ -178,8 +173,8 @@
 						<p>Wholeheartedly Welcome you...</p>
 					</header>
 					<ul class="actions stacked">
-						<li><a href="#" class="button fit primary">Welcome</a></li>
-						<li><a href="#" class="button fit">Contact</a></li>
+						<li><a href="#welcome" class="button fit primary">Welcome</a></li>
+						<li><a href="#contact" class="button fit">Contact</a></li>
 					</ul>
 				</div>
 			</section>
