--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 
 						</div>
 					</section>
+					<ul class="actions special" style="margin-top: 10px;">
+						<li><a href="https://goo.gl/maps/hhdSEamFJ58VaZNw5" target="_blank" class="button primary">Google Map</a></li>
+					</ul>
 					<br></b>"Love recognizes no barriers. It jumps hurdles, leaps fences, penetrates walls </br>to
 					arrive at
 					its destination full of hope."<b></br> Maya Angelou</p>
