--- a/index.html
+++ b/index.html
@@ -191,10 +191,12 @@
 							class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/josephalexantony365/" class="icon brands fa-instagram"><span
 								class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon solid fa-envelope"><span
+									class="label">josephalexantony365@gmail.com</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; @josephalexantony</li>
+					<li>SoftwareEngineer@Aot-Technologies</li>
 				</ul>
 			</footer>
 
