--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 					<div class="content">
 						<h2>07 | 11 | 2022<br />
-							Monday</h2>
+							Monday 11:00 am</h2>
 						<br>"So they are no longer two, but one flesh. Therefore what God has joined together, let no
 						one
 						separate." </br></br>Matthew 19:06 </p>
@@ -177,7 +177,7 @@
 					</header>
 					<ul class="actions stacked">
 						<li><a href="#welcome" class="button fit primary">Welcome</a></li>
-						<li><a href="#contact" class="button fit">Contact</a></li>
+						<li><a href="#contact" class="button fit secondary">Contact</a></li>
 					</ul>
 				</div>
 			</section>
