--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 						</div>
 					</section>
 					<ul class="actions special" style="margin-top: 10px;">
-						<li><a href="https://goo.gl/maps/hhdSEamFJ58VaZNw5" target="_blank" class="button primary">Google Map</a></li>
+						<li><a href="https://goo.gl/maps/hhdSEamFJ58VaZNw5" target="_blank"
+								class="button primary">Google Map</a></li>
 					</ul>
 					<br></b>"Love recognizes no barriers. It jumps hurdles, leaps fences, penetrates walls </br>to
 					arrive at
@@ -177,10 +178,11 @@
 					</header>
 					<ul class="actions stacked">
 						<li><a href="#welcome" class="button fit primary">Welcome</a></li>
-						<li><a href="#contact" class="button fit secondary">Contact</a></li>
+						<li><a href="#" class="button fit primary">Location</a></li>
 					</ul>
 				</div>
 			</section>
+			
 
 			<!-- Footer -->
 			<footer id="footer">
@@ -191,8 +193,8 @@
 							class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/josephalexantony365/" class="icon brands fa-instagram"><span
 								class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span
-									class="label">josephalexantony365@gmail.com</span></a></li>
+					<li><a href="#" class="icon solid fa-envelope"><span
+								class="label">josephalexantony365@gmail.com</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; @josephalexantony</li>
